# sscma-example-sg200x

cmake/: build.cmake
components/SeSg/open/: CMakeLists.txt  README.md
components/SeSg/open/lib/: libopencv_calib3d.so.4.5.0  libopencv_core.so.4.5.0  libopencv_features2d.so.4.5.0  libopencv_flann.so.4.5.0  libopencv_imgproc.so.4.5.0  libopencv_objdetect.so.4.5.0
solutions/: .gitignore
solutions/cosg-project/ppocr-reader/: CMakeLists.txt
solutions/sesg-project/apriltag_demo/: CMakeLists.txt  README.md
solutions/sesg-project/apriltag_demo/main/: CMakeLists.txt  main.cpp
solutions/sesg-project/apriltag_demo/wiki/: DEPLOY_REPORT.md  apriltag_demo_Demo_Wiki.md
solutions/sesg-project/depth_anything_npu/: CMakeLists.txt
solutions/sesg-project/gb28181_yolo/: .gitignore  CMakeLists.txt  README.md  build.sh  gb28181_client.c  run_on_device.sh
solutions/sesg-project/gb28181_yolo/evidence/: acceptance.txt  srs_streams_api.json
solutions/sesg-project/gb28181_yolo/main/: main.cpp
solutions/sesg-project/gb28181_yolo/wiki/: DEPLOY_REPORT.md  gb28181_yolo_Demo_Wiki.md
solutions/sesg-project/hand_gesture/: CMakeLists.txt  README.md
solutions/sesg-project/hand_gesture/main/: CMakeLists.txt  engine_utils.h  gesture_math.cpp  gesture_math.h  gesture_recognizer.cpp  gesture_recognizer.h  hand_detector.cpp  hand_detector.h  hand_landmarker.cpp  main.cpp  (+2 more)
solutions/sesg-project/mediapipe_hands/: CMakeLists.txt
solutions/sesg-project/onvif_yolo/: README.md
solutions/sesg-project/rtmp_yolo/: README.md  run_rtmp.sh
solutions/sesg-project/yolo_6d_pose/: README.md
(+31 files in other folders)
